Закончена работа с детальным просмотром внутри покедекса

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,9 +1,44 @@
 {
   "@@locale": "en",
   "welcomeMessage" : "Welcome!",
+  "rarity_string" : "Rarity",
   "poke_rarity_casual" : "Casual",
   "poke_rarity_rare" : "Rare",
   "poke_rarity_epic" : "Epic",
   "poke_rarity_mystic" : "Mystic",
-  "poke_rarity_legendary" : "Legendary"
+  "poke_rarity_legendary" : "Legendary",
+  "region_string" : "Region",
+  "region_kanto" : "Kanto",
+  "region_johto" : "Johto",
+  "region_hoenn" : "Hoenn",
+  "region_sinnoh" : "Sinnoh",
+  "region_unova" : "Unova",
+  "region_kalos" : "Kalos",
+  "pokemon_type_string" : "Type",
+  "pokemon_type_normal" : "Normal",
+  "pokemon_type_fire" : "Fire",
+  "pokemon_type_water" : "Water",
+  "pokemon_type_electric" : "Electric",
+  "pokemon_type_grass" : "Grass",
+  "pokemon_type_ice" : "Ice",
+  "pokemon_type_fighting" : "Fighting",
+  "pokemon_type_poison" : "Poison",
+  "pokemon_type_ground" : "Ground",
+  "pokemon_type_flying" : "Flying",
+  "pokemon_type_psychic" : "Psychic",
+  "pokemon_type_bug" : "Bug",
+  "pokemon_type_rock" : "Rock",
+  "pokemon_type_ghost" : "Ghost",
+  "pokemon_type_dragon" : "Dragon",
+  "pokemon_type_dark" : "Dark",
+  "pokemon_type_steel" : "Steel",
+  "pokemon_type_fairy" : "Fairy",
+  "pokemon_type_weakness_string" : "Weakness",
+  "pokemon_stats_string" : "Stats",
+  "pokemon_stats_hp" : "HP",
+  "pokemon_stats_attack" : "Attack",
+  "pokemon_stats_defence" : "Defence",
+  "pokemon_stats_special_attack" : "Sp. Attack",
+  "pokemon_stats_special_defence" : "Sp. Defence",
+  "pokemon_stats_speed" : "Speed"
 }
