--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -1,9 +1,44 @@
 {
   "@@locale": "ky",
   "welcomeMessage" : "Кош келиңиздер!",
+  "rarity_string" : "Сейрек",
   "poke_rarity_casual" : "Кадимки",
   "poke_rarity_rare" : "Сейрек",
   "poke_rarity_epic" : "Эпикалык",
   "poke_rarity_mystic" : "Мистикалык",
-  "poke_rarity_legendary" : "Легендарлуу"
+  "poke_rarity_legendary" : "Легендарлуу",
+  "region_string" : "Аймак",
+  "region_kanto" : "Канто",
+  "region_johto" : "Джото",
+  "region_hoenn" : "Хоенн",
+  "region_sinnoh" : "Синно",
+  "region_unova" : "Юнова",
+  "region_kalos" : "Калос",
+  "pokemon_type_string" : "Түрү",
+  "pokemon_type_normal" : "Нормалдуу",
+  "pokemon_type_fire" : "Оттуу",
+  "pokemon_type_water" : "Суу",
+  "pokemon_type_electric" : "Электрдик",
+  "pokemon_type_grass" : "Чөп",
+  "pokemon_type_ice" : "Муз-муз",
+  "pokemon_type_fighting" : "Согуштук",
+  "pokemon_type_poison" : "Уу",
+  "pokemon_type_ground" : "Жер",
+  "pokemon_type_flying" : "Учуу",
+  "pokemon_type_psychic" : "Акыл-эси",
+  "pokemon_type_bug" : "Курт-кумурска",
+  "pokemon_type_rock" : "Таштак",
+  "pokemon_type_ghost" : "Арбак",
+  "pokemon_type_dragon" : "Ажыдаар",
+  "pokemon_type_dark" : "Караңгы",
+  "pokemon_type_steel" : "Болот",
+  "pokemon_type_fairy" : "Сыйкырдуу",
+  "pokemon_type_weakness_string" : "Алсыздыкка каршы",
+  "pokemon_stats_string" : "Көрсөткүчтөр",
+  "pokemon_stats_hp" : "ХП",
+  "pokemon_stats_attack" : "Чабуул",
+  "pokemon_stats_defence" : "Коргоо",
+  "pokemon_stats_special_attack" : "Өзгөчө чабуул",
+  "pokemon_stats_special_defence" : "Өзгөчө коргоо",
+  "pokemon_stats_speed" : "Ылдамдык"
 }
