--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,9 +1,44 @@
 {
   "@@locale": "ru",
   "welcomeMessage" : "Добро пожаловать!!",
+  "rarity_string" : "Редкость",
   "poke_rarity_casual" : "Обычный",
   "poke_rarity_rare" : "Редкий",
   "poke_rarity_epic" : "Эпический",
   "poke_rarity_mystic" : "Мистический",
-  "poke_rarity_legendary" : "Легендарный"
+  "poke_rarity_legendary" : "Легендарный",
+  "region_string" : "Регион",
+  "region_kanto" : "Канто",
+  "region_johto" : "Джото",
+  "region_hoenn" : "Хоенн",
+  "region_sinnoh" : "Синно",
+  "region_unova" : "Юнова",
+  "region_kalos" : "Калос",
+  "pokemon_type_string" : "Тип",
+  "pokemon_type_normal" : "Нормальный",
+  "pokemon_type_fire" : "Огненный",
+  "pokemon_type_water" : "Водный",
+  "pokemon_type_electric" : "Электрический",
+  "pokemon_type_grass" : "Травяной",
+  "pokemon_type_ice" : "Ледяной",
+  "pokemon_type_fighting" : "Боевой",
+  "pokemon_type_poison" : "Ядовитый",
+  "pokemon_type_ground" : "Земляной",
+  "pokemon_type_flying" : "Летающий",
+  "pokemon_type_psychic" : "Психический",
+  "pokemon_type_bug" : "Насекомый",
+  "pokemon_type_rock" : "Каменный",
+  "pokemon_type_ghost" : "Призрачный",
+  "pokemon_type_dragon" : "Драконий",
+  "pokemon_type_dark" : "Темный",
+  "pokemon_type_steel" : "Стальной",
+  "pokemon_type_fairy" : "Волшебный",
+  "pokemon_type_weakness_string" : "Слабость против",
+  "pokemon_stats_string" : "Показатели",
+  "pokemon_stats_hp" : "ХП",
+  "pokemon_stats_attack" : "Атака",
+  "pokemon_stats_defence" : "Защита",
+  "pokemon_stats_special_attack" : "Особая атака",
+  "pokemon_stats_special_defence" : "Особая защита",
+  "pokemon_stats_speed" : "Скорость"
 }
