--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -40,5 +40,7 @@
   "pokemon_stats_defence" : "Защита",
   "pokemon_stats_special_attack" : "Особая атака",
   "pokemon_stats_special_defence" : "Особая защита",
-  "pokemon_stats_speed" : "Скорость"
+  "pokemon_stats_speed" : "Скорость",
+  "choice_type_string" : "Выберите тип",
+  "choice_string" : "Выбрать"
 }
