--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -42,5 +42,6 @@
   "pokemon_stats_special_defence" : "Sp. Defence",
   "pokemon_stats_speed" : "Speed",
   "choice_type_string" : "Choice type",
-  "choice_string" : "Choice"
+  "choice_string" : "Choice",
+  "spin_roulette_string" : "Spin roulette"
 }
