--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -48,5 +48,113 @@
   "buy_string" : "Buy",
   "low_money_string" : "Insufficient funds!",
   "challenge_string" : "Challenges",
-  "contest_string" : "Contests"
+  "contest_string" : "Contests",
+
+  "k1_ch_string" : "Boulder Badge",
+  "k2_ch_string" : "Cascade Badge",
+  "k3_ch_string" : "Thunder Badge",
+  "k4_ch_string" : "Rainbow Badge",
+  "k5_ch_string" : "Soul Badge",
+  "k6_ch_string" : "Marsh Badge",
+  "k7_ch_string" : "Volcano Badge",
+  "k8_ch_string" : "Earth Badge",
+
+  "k1_city_string" : "Pewter City",
+  "k2_city_string" : "Cerulean City",
+  "k3_city_string" : "Vermilion City",
+  "k4_city_string" : "Celadon City",
+  "k5_city_string" : "Fuchsia City",
+  "k6_city_string" : "Saffron City",
+  "k7_city_string" : "Cinnabar Island",
+  "k8_city_string" : "Viridian City",
+
+  "j1_ch_string" : "Zephyr Badge",
+  "j2_ch_string" : "Hive Badge",
+  "j3_ch_string" : "Plain Badge",
+  "j4_ch_string" : "Fog Badge",
+  "j5_ch_string" : "Storm Badge",
+  "j6_ch_string" : "Mineral Badge",
+  "j7_ch_string" : "Glacier Badge",
+  "j8_ch_string" : "Rising Badge",
+
+  "j1_city_string" : "Violet City",
+  "j2_city_string" : "Azalea Town",
+  "j3_city_string" : "Goldenrod City",
+  "j4_city_string" : "Ecruteak City",
+  "j5_city_string" : "Cianwood City",
+  "j6_city_string" : "Olivine City",
+  "j7_city_string" : "Mahogany Town",
+  "j8_city_string" : "Blackthorn City",
+
+  "h1_ch_string" : "Stone Badge",
+  "h2_ch_string" : "Knuckle Badge",
+  "h3_ch_string" : "Dynamo Badge",
+  "h4_ch_string" : "Heat Badge",
+  "h5_ch_string" : "Balance Badge",
+  "h6_ch_string" : "Feather Badge",
+  "h7_ch_string" : "Mind Badge",
+  "h8_ch_string" : "Rain Badge",
+
+  "h1_city_string" : "Rustboro City",
+  "h2_city_string" : "Dewford Town",
+  "h3_city_string" : "Mauville City",
+  "h4_city_string" : "Lavaridge Town",
+  "h5_city_string" : "Petalburg City",
+  "h6_city_string" : "Fortree City",
+  "h7_city_string" : "Mossdeep City",
+  "h8_city_string" : "Sootopolis City",
+
+  "s1_ch_string" : "Coal Badge",
+  "s2_ch_string" : "Forest Badge",
+  "s3_ch_string" : "Cobble Badge",
+  "s4_ch_string" : "Fen Badge",
+  "s5_ch_string" : "Relic Badge",
+  "s6_ch_string" : "Mine Badge",
+  "s7_ch_string" : "Icicle Badge",
+  "s8_ch_string" : "Beacon Badge",
+
+  "s1_city_string" : "Oreburgh City",
+  "s2_city_string" : "Eterna City",
+  "s3_city_string" : "Veilstone City",
+  "s4_city_string" : "Pastoria City",
+  "s5_city_string" : "Hearthome City",
+  "s6_city_string" : "Canalave City",
+  "s7_city_string" : "Snowpoint City",
+  "s8_city_string" : "Sunyshore City",
+
+  "u1_ch_string" : "Trio Badge",
+  "u2_ch_string" : "Basic Badge",
+  "u3_ch_string" : "Insect Badge",
+  "u4_ch_string" : "Bolt Badge",
+  "u5_ch_string" : "Quake Badge",
+  "u6_ch_string" : "Jet Badge",
+  "u7_ch_string" : "Freeze Badge",
+  "u8_ch_string" : "Legend Badge",
+
+  "u1_city_string" : "Striaton City",
+  "u2_city_string" : "Nacrene City",
+  "u3_city_string" : "Castelia City",
+  "u4_city_string" : "Nimbasa City",
+  "u5_city_string" : "Driftveil City",
+  "u6_city_string" : "Mistralton City",
+  "u7_city_string" : "Icirrus City",
+  "u8_city_string" : "Opelucid City",
+
+  "ka1_ch_string" : "Bug Badge",
+  "ka2_ch_string" : "Cliff Badge",
+  "ka3_ch_string" : "Rumble Badge",
+  "ka4_ch_string" : "Plant Badge",
+  "ka5_ch_string" : "Voltage Badge",
+  "ka6_ch_string" : "Fairy Badge",
+  "ka7_ch_string" : "Psychic Badge",
+  "ka8_ch_string" : "Iceberg Badge",
+
+  "ka1_city_string" : "Santalune City",
+  "ka2_city_string" : "Cyllage City",
+  "ka3_city_string" : "Shalour City",
+  "ka4_city_string" : "Coumarine City",
+  "ka5_city_string" : "Lumiose City",
+  "ka6_city_string" : "Laverre City",
+  "ka7_city_string" : "Anistar City",
+  "ka8_city_string" : "Snowbelle City"
 }
