--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -48,5 +48,113 @@
   "buy_string" : "Сатып алуу",
   "low_money_string" : "Каражат жетишсиз!",
   "challenge_string" : "Тесттер",
-  "contest_string" : "Жарыш"
+  "contest_string" : "Жарыш",
+
+  "k1_ch_string" : "Значок Валуна ",
+  "k2_ch_string" : "Значок Капли",
+  "k3_ch_string" : "Значок Грома",
+  "k4_ch_string" : "Значок Радуги",
+  "k5_ch_string" : "Значок Сердца",
+  "k6_ch_string" : "Значок Золотой",
+  "k7_ch_string" : "Значок Вулканический",
+  "k8_ch_string" : "Значок Земляной",
+
+  "k1_city_string" : "Город Пьютер",
+  "k2_city_string" : "Город Церулин",
+  "k3_city_string" : "Город Вермилион",
+  "k4_city_string" : "Город Селадон",
+  "k5_city_string" : "Город Фуксия",
+  "k6_city_string" : "Город Шафрон",
+  "k7_city_string" : "Остров Синнабар",
+  "k8_city_string" : "Город Виридиан",
+
+  "j1_ch_string" : "Значок Ветрянной",
+  "j2_ch_string" : "Значок Улья",
+  "j3_ch_string" : "Значок Простой",
+  "j4_ch_string" : "Значок Туманный",
+  "j5_ch_string" : "Значок Штормовой",
+  "j6_ch_string" : "Значок Минеральный",
+  "j7_ch_string" : "Значок Ледника",
+  "j8_ch_string" : "Значок Восходящий",
+
+  "j1_city_string" : "Город Виолет",
+  "j2_city_string" : "Город Азалия",
+  "j3_city_string" : "Город ГолденРод",
+  "j4_city_string" : "Город Экрутик",
+  "j5_city_string" : "Город Цианвуд",
+  "j6_city_string" : "Город Оливин",
+  "j7_city_string" : "Город Махогани",
+  "j8_city_string" : "Город Блэктоурн",
+
+  "h1_ch_string" : "Значок Каменный",
+  "h2_ch_string" : "Значок Ударный",
+  "h3_ch_string" : "Значок Динамический",
+  "h4_ch_string" : "Значок Тепловой",
+  "h5_ch_string" : "Значок Баланса",
+  "h6_ch_string" : "Значок Пера",
+  "h7_ch_string" : "Значок Разума",
+  "h8_ch_string" : "Значок Дождя",
+
+  "h1_city_string" : "Город Растборо",
+  "h2_city_string" : "Город Дюфорд",
+  "h3_city_string" : "Город Маувилл",
+  "h4_city_string" : "Город Лаваридж",
+  "h5_city_string" : "Город Петалбург",
+  "h6_city_string" : "Город Фортри",
+  "h7_city_string" : "Город Моссдип",
+  "h8_city_string" : "Город Сутополис",
+
+  "s1_ch_string" : "Значок Угольный",
+  "s2_ch_string" : "Значок Лесной",
+  "s3_ch_string" : "Значок Булыжника",
+  "s4_ch_string" : "Значок Болотный",
+  "s5_ch_string" : "Значок Реликвии",
+  "s6_ch_string" : "Значок Рудника",
+  "s7_ch_string" : "Значок Сосульки",
+  "s8_ch_string" : "Значок Сигнальный",
+
+  "s1_city_string" : "Город Оренбург",
+  "s2_city_string" : "Город Этерна",
+  "s3_city_string" : "Город Вейлстоун",
+  "s4_city_string" : "Город Пастория",
+  "s5_city_string" : "Город Хартхоум",
+  "s6_city_string" : "Город Каналав",
+  "s7_city_string" : "Город Сноупоинт",
+  "s8_city_string" : "Город Синишор",
+
+  "u1_ch_string" : "Значок Тройной",
+  "u2_ch_string" : "Значок Номинальный",
+  "u3_ch_string" : "Значок Насекомого",
+  "u4_ch_string" : "Значок Молнии",
+  "u5_ch_string" : "Значок Обвала",
+  "u6_ch_string" : "Значок Струйный",
+  "u7_ch_string" : "Значок Холода",
+  "u8_ch_string" : "Значок Токсичный",
+
+  "u1_city_string" : "Город Стриатон",
+  "u2_city_string" : "Город Накрене",
+  "u3_city_string" : "Город Кастелия",
+  "u4_city_string" : "Город Нимбаса",
+  "u5_city_string" : "Город Дрифтвейл",
+  "u6_city_string" : "Город Мистралтон",
+  "u7_city_string" : "Город Икурус",
+  "u8_city_string" : "Город Опелюсид",
+
+  "ka1_ch_string" : "Значок Жука",
+  "ka2_ch_string" : "Значок Утеса",
+  "ka3_ch_string" : "Значок Перчатки",
+  "ka4_ch_string" : "Значок Растения",
+  "ka5_ch_string" : "Значок Вольтаж",
+  "ka6_ch_string" : "Значок Феи",
+  "ka7_ch_string" : "Значок Психический",
+  "ka8_ch_string" : "Значок Айсберга",
+
+  "ka1_city_string" : "Город Санатлюн",
+  "ka2_city_string" : "Город Силадж",
+  "ka3_city_string" : "Город Шалур",
+  "ka4_city_string" : "Город Коумарин",
+  "ka5_city_string" : "Город Люмиоз",
+  "ka6_city_string" : "Город Лаверре",
+  "ka7_city_string" : "Город Анистар",
+  "ka8_city_string" : "Город Сноубелл"
 }
