--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -156,5 +156,7 @@
   "ka5_city_string" : "Город Люмиоз",
   "ka6_city_string" : "Город Лаверре",
   "ka7_city_string" : "Город Анистар",
-  "ka8_city_string" : "Город Сноубелл"
+  "ka8_city_string" : "Город Сноубелл",
+
+  "ribbon_string" : "Лента"
 }
