--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -171,5 +171,17 @@
   "settings_load_progress" : "Загрузить данные",
   "settings_save_progress" : "Сохранить данные",
 
-  "choose_region_string" : "Выберите регион"
+  "choose_region_string" : "Выберите регион",
+
+  "your_team_string" : "Ваша команда",
+
+  "pokemons_string" : "Покемоны",
+  "items_string" : "Предметы",
+
+  "lvl_short_string" : "Ур.",
+  "lvl_long_string" : "Уровень",
+
+  "add_to_team_string" : "Добавить в отряд",
+  "evolution_string" : "Эволюция!",
+  "release_pokemon_string" : "Отпустить"
 }
