Улучшена работа с инвентарем пользователя. Добавлены функции добавление в команду и убрать из отряда. А так же добавена функция отпустить покемона на волю

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -182,6 +182,7 @@
   "lvl_long_string" : "Level",
 
   "add_to_team_string" : "Add to team",
+  "remove_from_team_string" : "Remove from team",
   "evolution_string" : "Evolution!",
   "release_pokemon_string" : "Release"
 
