--- a/lib/l10n/app_ky.arb
+++ b/lib/l10n/app_ky.arb
@@ -182,6 +182,7 @@
   "lvl_long_string" : "Уровень",
 
   "add_to_team_string" : "Отрядга кошуу",
+  "remove_from_team_string" : "Отряддан алып салуу",
   "evolution_string" : "Эволюция!",
   "release_pokemon_string" : "Кетүү"
 
