--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -182,6 +182,7 @@
   "lvl_long_string" : "Уровень",
 
   "add_to_team_string" : "Добавить в отряд",
+  "remove_from_team_string" : "Убрать из отряда",
   "evolution_string" : "Эволюция!",
   "release_pokemon_string" : "Отпустить"
 }
