--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -209,6 +209,9 @@
   "setting_creator_string" : "Created by Tashtanov Temirlan",
 
   "location_map_string" : "Location #",
-  "location_map_search" : "Search pokemons"
+  "location_map_search" : "Search pokemons",
 
+  "evolution_error" : "Further evolution is impossible!",
+  "evolution_alert_title" : "Are you sure about evolution?",
+  "evolution_alert_subtitle" : "The action can't be undone"
 }
